Adicionando testes na classe do Marathons e Member Resource